corrige texto en contacto

--- a/desafio final/index.html
+++ b/desafio final/index.html
@@ -52,7 +52,9 @@
               <div class="Ubicacion">
               </div>
               <div class="border btn-light">
-                <button type="button" class="btn btn-dark"> <a href="file:///Users/adrianpino/Documents/desafio%20latam/index.html" target="_blank">Link</a></button>
+                <button type="button" class="btn btn-dark"> <a
+                    href="file:///Users/adrianpino/Documents/desafio%20latam/index.html"
+                    target="_blank">Link</a></button>
               </div>
             </div>
           </div>
@@ -67,7 +69,9 @@
                   <div class="Ubicacion">
                   </div>
                   <div class="border">
-                    <button type="button" class="btn btn-dark"> <a href="file:///Users/adrianpino/Documents/desafio%20latam/proyecto%20iguana/index.html" target="_blank">Link</a></button>
+                    <button type="button" class="btn btn-dark"> <a
+                        href="file:///Users/adrianpino/Documents/desafio%20latam/proyecto%20iguana/index.html"
+                        target="_blank">Link</a></button>
                   </div>
                 </div>
               </div>
@@ -82,7 +86,9 @@
                       <div class="Ubicacion">
                       </div>
                       <div class="border">
-                        <button type="button" class="btn btn-dark"> <a href="file:///Users/adrianpino/Documents/desafio%20latam/PROYECTO%20CSS/index.html" target="_blank">Link</a></button>
+                        <button type="button" class="btn btn-dark"> <a
+                            href="file:///Users/adrianpino/Documents/desafio%20latam/PROYECTO%20CSS/index.html"
+                            target="_blank">Link</a></button>
                       </div>
                     </div>
                   </div>
@@ -97,15 +103,17 @@
                           <div class="Ubicacion">
                           </div>
                           <div class="border">
-                            <button type="button" class="btn btn-dark"> <a href="file:///Users/adrianpino/Documents/desafio%20latam/boostrap/index.html" target="_blank">Link</a></button>
+                            <button type="button" class="btn btn-dark"> <a
+                                href="file:///Users/adrianpino/Documents/desafio%20latam/boostrap/index.html"
+                                target="_blank">Link</a></button>
                           </div>
                         </div>
                       </div>
                     </div>
-    </div>
+                  </div>
   </main>
   <footer class="bg-dark py-5">
-    <h2>Por favor contactanos....</h2>
+    <h2 class="text-center text-white my-3">Dejanos tus datos y te contactaremos...</h2>
     <form class="bg-dark container">
       <div class="mb-3">
         <label for="exampleInputEmail1" class="form-label"></label>
